Updating Mailchimp information.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ title: Student's Guide to the Internet
 
 			<h2>Stay Updated</h2>
 			<p>Leave your <strong>name</strong> and <strong>email</strong> below and we'll contact you when we have something more to share.</p>
-			<form action="//coml.us11.list-manage.com/subscribe/post?u=78045d0758e8c663649517056&amp;id=0c23e4e677" name="mc-embedded-subscribe-form" method="post" target="_blank">
+			<form action="" name="mc-embedded-subscribe-form" method="post" target="_blank">
 			  <div class="cols">
 			    <div class="col width-1/2">
 			      <label for="member_name">Name</label>
