Updating site on mobile. Adding more content.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <div class="section typeset">
       <div class="column column--main column--left">
         <h3>About This Site</h3>
-        <p>This website serves as a repository of information for students of design. It is, of course, not limited to students and my hope is everyone can find something useful here—whether it be drawing inspiration from another designer, or learning something new through reading.</p>
+        <p>This website serves as a repository of information for students of design; standout articles, books, and media relating to design and technology from the past few years.</p>
+        <p> It is, of course, not limited to students and my hope is everyone can find something useful here.</p>
       </div>
 
     </div>
@@ -67,32 +68,33 @@
       <div class="column column--quad">
         <h6>Design</h6>
         <ul class="unstyled">
-          <li><p><a href="#">The Shape of Design</a><br /><small>&mdash; Frank Chimero, 2014</small></p></li>
-          <li><p><a href="#">What Is a Designer?</a><br /><small>&mdash; Mike Monterio, 2015</small></p></li>
-          <li><p><a href="#">The Dribbbleisation of Design</a><br /><small>&mdash; Intercom, 2014</small></p></li>
-          <li><p><a href="#">We Are What We Build</a><br /><small>&mdash; Eric Meyer, 2016</small></p></li>
+          <li><p><a href="https://medium.com/@monteiro/what-is-a-designer-94ac32ff92d0#.hjusp4lj1">What Is a Designer?</a><br /><small>&mdash; Mike Monterio, 2015</small></p></li>
+          <li><p><a href="https://medium.com/intercom-inside/the-dribbblisation-of-design-406422ccb026#9683.e125ntqeq">The Dribbbleisation of Design</a><br /><small>&mdash; Intercom, 2014</small></p></li>
+          <li><p><a href="https://m.signalvnoise.com/evaluating-a-redesign-71e4344dd265#.sqi2wrgw2">Evaluating a Redesign</a><br /><small>&mdash; Jason Fried, 2015</small></p></li>
+          <li><p><a href="https://medium.com/the-year-of-the-looking-glass/8-unintuitive-lessons-on-being-a-designer-ca7e97a572ee#.2opoeo7r9">Unintuitive Lessons on Being a Designer</a><br /><small>&mdash; Julie Zhuo, 2016</small></p></li>
         </ul>
       </div>
 
       <div class="column column--quad">
         <h6>Programming</h6>
         <ul class="unstyled">
-          <li><p><a href="#">What Is Code?</a><br /><small>&mdash; Paul Ford, 2015</small></p></li>
-          <li><p><a href="#">Get Started With Git</a><br /><small>&mdash; Al Shaw, 2010</small></p></li>
+          <li><p><a href="http://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/">What Is Code?</a><br /><small>&mdash; Paul Ford, 2015</small></p></li>
         </ul>
       </div>
 
       <div class="column column--quad">
         <h6>Work &amp; Life</h6>
         <ul class="unstyled">
-          <li><p><a href="#">The Crossroads of Should and Must</a><br /><small>&mdash; Elle Luna, 2014</small></p></li>
+          <li><p><a href="https://medium.com/@elleluna/the-crossroads-of-should-and-must-90c75eb7c5b0#.kylqawfkl">The Crossroads of Should and Must</a><br /><small>&mdash; Elle Luna, 2014</small></p></li>
         </ul>
       </div>
 
       <div class="column column--quad">
         <h6>Other</h6>
         <ul class="unstyled">
-          <li><p><a href="#">Messages to the Future</a><br /><small>&mdash; Heather Ryan, 2016</small></p></li>
+          <li><p><a href="https://themanual.org/read/issues/5/eric-meyer/article">We Are What We Build</a><br /><small>&mdash; Eric Meyer, 2015</small></p></li>
+          <li><p><a href="https://medium.com/doing-the-work/it-s-portfolio-season-here-s-8-thing-i-wish-i-d-known-while-designing-mine-4869308540e7#.eif08u2ak">Building your design portfolio? Here are 8 things I wish I’d known.</a><br /><small>&mdash; Emelyn Baker, 2015</small></p></li>
+          <li><p><a href="https://themanual.org/read/issues/4/wilson-miner/article">Perennial Design</a><br /><small>&mdash; Wilson Miner, 2015</small></p></li>
         </ul>
       </div>
     </div>
@@ -106,6 +108,7 @@
         <ul class="unstyled">
           <li><p><a href="#">Design as Art</a><br /><small>&mdash; Bruno Munari, 1971</small></p></li>
           <li><p><a href="#">Less and More: The Design Ethos of Dieter Rams</a><br /><small>&mdash; Klaus Klemp, 2011</small></p></li>
+          <li><p><a href="http://read.shapeofdesignbook.com">The Shape of Design</a><br /><small>&mdash; Frank Chimero, 2014</small></p></li>
         </ul>
       </div>
 
@@ -121,7 +124,7 @@
       <div class="column column--quad">
         <h6>Business &amp; Work</h6>
         <ul class="unstyled">
-          <li><p><a href="#">The Crossroads of Should and Must</a><br /><small>&mdash; Elle Luna, 2014</small></p></li>
+          <li><p><a href="#">Design Is A Job</a><br /><small>&mdash; Mike Monteiro, 2012</small></p></li>
         </ul>
       </div>
 
@@ -130,6 +133,104 @@
         <ul class="unstyled">
           <li><p><a href="#">Messages to the Future</a><br /><small>&mdash; Heather Ryan, 2016</small></p></li>
         </ul>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column">
+        <h3>People</h3>
+      </div>
+      <div class="column column--quad">
+        <ul class="unstyled">
+          <li><a href="#">Wilson Minor</a></li>
+          <li><a href="#">Frank Chimero</a></li>
+          <li><a href="#">Ethan Marcotte</a></li>
+          <li><a href="#">Neven Mrgan</a></li>
+          <li><a href="#">Allison House</a></li>
+          <li><a href="#">Eric Meyer</a></li>
+          <li><a href="#">Meg Lewis</a></li>
+          <li><a href="#">Jen Mussari</a></li>
+          <li><a href="#">Jez Burrows</a></li>
+          <li><a href="#">Tina Roth Eisenberg</a></li>
+          <li><a href="#">David Cole</a></li>
+          <li><a href="#">Adam Morse</a></li>
+          <li><a href="#">Karolina Szczur</a></li>
+          <li><a href="#">Jane Ng</a></li>
+          <li><a href="#">Benjamin de Cock</a></li>
+          <li><a href="#">Jessica Hische</a></li>
+          <li><a href="#">Sara Soueidan</a></li>
+          <li><a href="#">Emily Haasch</a></li>
+          <li><a href="#">Helena Price</a></li>
+          <li><a href="#">Lucy Bellwood</a></li>
+        </ul>
+      </div>
+
+      <div class="column column--quad">
+        <ul class="unstyled">
+          <li><a href="#">Jon Han</a></li>
+          <li><a href="#">Benjamin den Boer</a></li>
+          <li><a href="#">Eric R. Mortensen</a></li>
+          <li><a href="#">Amit Gupta</a></li>
+          <li><a href="#">Jenn Bane</a></li>
+          <li><a href="#">Gaby Lord</a></li>
+          <li><a href="#">Laura Bee</a></li>
+          <li><a href="#">Liz Danzico</a></li>
+          <li><a href="#">Mandy Brown</a></li>
+          <li><a href="#">Nicole Fenton</a></li>
+          <li><a href="#">Luke Beard</a></li>
+          <li><a href="#">Diana Kimball</a></li>
+          <li><a href="#">Kia Brach</a></li>
+          <li><a href="#">John Gruber</a></li>
+          <li><a href="#">Paul Ford</a></li>
+          <li><a href="#">Brian Donahue</a></li>
+          <li><a href="#">Sven Ellingen</a></li>
+          <li><a href="#">Benedikt Lehnert</a></li>
+          <li><a href="#">Mr. Bingo</a></li>
+          <li><a href="#">Ash Huang</a></li>
+        </ul>
+      </div>
+
+      <div class="column column--quad">
+        <ul class="unstyled">
+          <li><a href="#">Max Tempkin</a></li>
+          <li><a href="#">Daniel Eden</a></li>
+          <li><a href="#">Jeffery Zeldman</a></li>
+          <li><a href="#">Elle Luna</a></li>
+          <li><a href="#">Andy McMillan</a></li>
+          <li><a href="#">Andy Baio</a></li>
+          <li><a href="#">Erin Marinovich</a></li>
+          <li><a href="#">Coby Chapple</a></li>
+          <li><a href="#">Cabel Sasser</a></li>
+          <li><a href="#">Ashley Baxter</a></li>
+          <li><a href="#">Linda Eliasen</a></li>
+          <li><a href="#">Daniel Fitzgerald</a></li>
+          <li><a href="#">Simon Collison</a></li>
+          <li><a href="#">Christopher Murphy</a></li>
+          <li><a href="#">Erik Speikermann</a></li>
+          <li><a href="#">Aaron James Draplin</a></li>
+          <li><a href="#">Elliot Jay Stocks</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </div>
+
+      <div class="column column--quad">
+        <ul class="unstyled">
+          <li><p><a href="#"></a></p></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="section typeset"
+      <div class="column column--duo">
+        <iframe src="https://player.vimeo.com/video/34017777" style="width:100%;" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div class="column column--duo">
+        <iframe style="width:100%;" height="300" src="https://www.youtube.com/embed/9AP1hoNJkMk" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="column column--duo">
+        <iframe  style="width:100%;" height="300" src="https://www.youtube.com/embed/_xG68lkrMDU?list=FLnt5LVQDgNmHclScek0Hgtg" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
 
