Fixing layout issue with the videos.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Student's Guide to the Internet</title>
   <link rel="stylesheet" href="/assets/css/style.min.css">
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -222,7 +222,7 @@
       </div>
     </div>
 
-    <div class="section typeset"
+    <div class="section typeset">
       <div class="column column--duo">
         <iframe src="https://player.vimeo.com/video/34017777" style="width:100%;" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
