--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     <div class="main-header__content section typeset">
       <div class="column">
         <h1 class="alpha">Student's Guide to the Internet</h1>
-        <p>&mdash; A collection of resources for students of design.</p>
-        <!-- <ul class="social">
-          <li><a href="https://twitter.com/share"><img src="assets/img/twitter.svg" alt=""></a></li>
-          <li><a href="http://www.facebook.com/sharer.php"><img src="assets/img/facebook.svg" alt=""></a></li>
-          <li><a href="mailto:?Subject=Check%20out%20these%20resources!"><img src="assets/img/email.svg" alt=""></a></li>
-        </ul> -->
+        <h6>&ndash; A collection of resources for students of design.</h6>
       </div>
     </div>
 
@@ -31,7 +26,7 @@
   <section id="baseline">
     <div class="section typeset">
       <div class="column column--main">
-        <h3>About This Site</h3>
+        <h2>About</h2>
         <p>This website serves as a repository of information for students of design; standout articles, books, and media relating to design and technology from the past few years.</p>
         <p>It is, of course, not limited to students and my hope is everyone can find something useful here.</p>
       </div>
@@ -166,7 +161,7 @@
   </section>
 
   <footer class="global-footer">
-    <p>Made by <a href="#">Aaron Gilmore</a> in Berlin. Available on <a href="#">GitHub</a>.</p>
+    <p>Made by <a href="#">Aaron Gilmore</a> in Belfast. Available on <a href="#">GitHub</a>. So long, and thanks for all the fish.</p>
   </footer>
 
 </body>
