--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
 
       <div class="column column--trio">
-          <p><a href="#" target="_blank">Wilson Minor</a></p>
+          <p><a href="#" target="_blank">Wilson Miner</a></p>
           <p class="caption">A digital designer based in San Francisco. Has worked at Apple, EveryBlock, Rdio, Facebook.</p>
 
           <p><a href="#" target="_blank">Frank Chimero</a></p>
@@ -182,8 +182,8 @@
           <p><a href="#" target="_blank">Erik Speikermann</a></p>
           <p class="caption">A German typographer and designer.</p>
 
-          <p><a href="#" target="_blank">Aaron James Draplin</a></p>
-          <p class="caption">Jeffrey Zeldman is an entrepreneur, web designer, author, podcaster and speaker on web design.</p>
+          <p><a href="https://twitter.com/karenmcgrane" target="_blank">Karen McGrane</a></p>
+          <p class="caption">Karen works on content strategy, information architecture, and interaction design. The author of <a href="https://abookapart.com/products/content-strategy-for-mobile">Content Strategy for Mobile</a>.</p>
 
           <p><a href="#" target="_blank">Robin Rendle</a></p>
           <p class="caption">UK-based designer. Writes for <a href="https://css-tricks.com/">CSS-Tricks</a>.</p>
@@ -197,22 +197,22 @@
       </div>
 
       <div class="column column--trio">
-        <p><a href="#" target="_blank">When We Build</a></p>
+        <p><a href="https://www.youtube.com/watch?v=c8mzxkP4evw" target="_blank">When We Build</a></p>
         <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
 
-        <p><a href="#" target="_blank">When We Build</a></p>
-        <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
+        <p><a href="https://www.youtube.com/watch?v=ouIdkokhwAg" target="_blank">Design in the Age of Entanglement</a></p>
+        <p class="caption">&mdash; Emmet Connolly, Inside Intercom, 2016</p>
 
-        <p><a href="#" target="_blank">When We Build</a></p>
-        <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
+        <p><a href="https://www.youtube.com/watch?v=v1_IAEmg0UU" target="_blank">This is Fine</a></p>
+        <p class="caption">&mdash; Linda Eliasen, Creative Mornings, 2016</p>
       </div>
 
       <div class="column column--trio">
-        <p><a href="#" target="_blank">When We Build</a></p>
-        <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
+        <p><a href="https://www.youtube.com/watch?v=_xG68lkrMDU" target="_blank">Kai Brach &ndash; Offscreen</a></p>
+        <p class="caption">&mdash; Kai Brach, for Envato, 2014</p>
         
-        <p><a href="#" target="_blank">When We Build</a></p>
-        <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
+        <p><a href="https://www.youtube.com/watch?v=jDIZS4IQlQk" target="_blank">Love Your Work</a></p>
+        <p class="caption">&mdash; Simon Sinek, Creative Mornings, 2012</p>
 
         <p><a href="#" target="_blank">When We Build</a></p>
         <p class="caption">&mdash; Wilson Miner, Build, 2012</p>        
