Adding social icons.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
       <div class="column">
         <h1>Student's Guide to the Internet</h1>
         <h2 class="epsilon">A collection of resources for students of design.</h2>
-        <ul class="social">
-          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a></li>
-          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a></li>
-        </ul>
       </div>
     </div>
 
@@ -227,6 +223,21 @@
 
         <p><a href="#" target="_blank">When We Build</a></p>
         <p class="caption">&mdash; Wilson Miner, Build, 2012</p>
+      </div>
+    </div>
+
+    <div class="section typeset">
+      <div class="column">
+        <ul class="social">
+          <li><a href="https://twitter.com/share"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a></li>
+          <li>
+          <a href="#" 
+            onclick="window.open(
+            'https://www.facebook.com/sharer/sharer.php?u={Permalink}', 
+            'facebook-share-dialog', 
+            'width=626,height=436'); 
+            return false;"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a></li>
+        </ul>
       </div>
     </div>
 
