--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="section typeset">
       <div class="column column--main">
         <h2>About</h2>
-        <p>This website serves as a repository of information for students of design; books, articles and media relating to design and technology from the past few years.</p>
-        <p>It is, of course, not limited to students and my hope is everyone can find something useful here. I've tried to gather a diverse range of information, the tip of the iceberg, if you will.</p>
+        <p>This website serves as a repository of information for students of design; the best books, articles, and media relating to design and technology that I've come accross in the past few years.</p>
+        <p>It is, of course, not limited to students and my hope is anyone can find something useful here. This is only a taste of the incredible wealth of knowledge available to us.</p>
       </div>
     </div>
 
@@ -119,9 +119,6 @@
 
         <p><a href="https://themanual.org/read/issues/5/eric-meyer/article" target="_blank">We Are What We Build</a></p>
         <p class="caption">&mdash; Eric Meyer, 2015</p>
-
-        <p><a href="https://medium.com/doing-the-work/it-s-portfolio-season-here-s-8-thing-i-wish-i-d-known-while-designing-mine-4869308540e7#.eif08u2ak" target="_blank">Building your design portfolio? Here are 8 things I wish I’d known.</a></p>
-        <p class="caption">&mdash; Emelyn Baker, 2015</p>
 
         <p><a href="https://themanual.org/read/issues/4/wilson-miner/article" target="_blank">Perennial Design</a></p>
         <p class="caption">&mdash; Wilson Miner, 2015</p>
@@ -232,11 +229,16 @@
           <li><a href="https://twitter.com/share"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a></li>
           <li>
           <a href="#" 
-            onclick="window.open(
-            'https://www.facebook.com/sharer/sharer.php?u={Permalink}', 
-            'facebook-share-dialog', 
-            'width=626,height=436'); 
-            return false;"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a></li>
+  onclick="
+  window.open(
+    'https://www.facebook.com/sharer/sharer.php?u=http://studentsguidetotheinternet.com/', 
+    'facebook-share-dialog', 
+    'width=626,height=436'); 
+    return false;">
+  <i class="fa fa-facebook" aria-hidden="true"></i>
+  Share on Facebook
+</a>
+          </li>
         </ul>
       </div>
     </div>
