Updating and re-ordering content.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   <section id="baseline">
     <div class="section typeset">
       <div class="column column--main">
-        <h2>About</h2>
+        <h2 class="beta">About</h2>
         <p>This website's purpose is to serve as a repository of information for students of design; standout books, articles, and media relating to design and technology.</p>
       </div>
     </div>
 
     <div class="section typeset">
       <div class="column">
-        <h3>Books</h3>
+        <h3 class="gamma">Books</h3>
       </div>
 
       <div class="column column--trio">
@@ -93,7 +93,7 @@
         <p><a href="http://amzn.to/2c7G37v" target="_blank">Managing Oneself</a></p>
         <p class="caption">Peter F. Drucker •2008</p>
 
-        <p><a href="https://themanual.org/read" target="_blank">The Manual</a></p>
+        <p><a href="http://shop.themanual.org/" target="_blank">The Manual</a></p>
         <p class="caption">Various • 2011&ndash;2014</p>
 
         <p><a href="http://www.offscreenmag.com" target="_blank">Offscreen</a></p>
@@ -166,58 +166,64 @@
       </div>
 
       <div class="column column--trio">
-          <p><a href="#" target="_blank">Wilson Miner</a></p>
-          <p class="caption">A digital designer based in San Francisco. Has worked at Apple, EveryBlock, Rdio, Facebook.</p>
+          <p><a href="https://twitter.com/ealshafei" target="_blank">Esra'a Al Shafei</a></p>
+          <p class="caption">Bahraini civil rights activist, blogger, and the founder and executive director of <a href="https://www.mideastyouth.com/" class="decoration-none" target="_blank">Mideast Youth</a>.</p>
 
-          <p><a href="#" target="_blank">Frank Chimero</a></p>
-          <p class="caption">Author of The Shape of Design, speaker, and designer.</p>
+          <p><a href="http://www.frankchimero.com/writing/" target="_blank">Frank Chimero</a></p>
+          <p class="caption">Author of <a href="http://read.shapeofdesignbook.com/" class="decoration-none" target="_blank">The Shape of Design</a>, speaker, and designer.</p>
 
-          <p><a href="#" target="_blank">Ethan Marcotte</a></p>
-          <p class="caption">Web designer, speaker, and author. He coined the term 'responsive web design'.</p>
+          <p><a href="http://anildash.com/" target="_blank">Anil Dash</a></p>
+          <p class="caption">Entrepreneur, activist and writer recognized as one of the most prominent voices advocating for a more humane, inclusive and ethical technology industry.</p>
 
-          <p><a href="#" target="_blank">Eric Meyer</a></p>
-          <p class="caption">An expert on HTML, CSS, and web standards.</p>
+          <p><a href="http://draplin.com/" target="_blank">Aaron Draplin</a></p>
+          <p class="caption">Badass. Graphic designer, author, and founder of the <a href="http://draplin.com/" class="decoration-none" target="_blank">Draplin Design Company</a>. Good first name.</p>
 
-          <p><a href="#" target="_blank">Jessica Hische</a></p>
-          <p class="caption">A letterer, illustrator, and type designer based in San Francisco.</p>
+          <p><a href="https://twitter.com/ftrain?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">Paul Ford</a></p>
+          <p class="caption">An experienced developer of technology for the web and mobile. Author of <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/" class="decoration-none" target="_blank">What Is Code?</a>.</p>
+
       </div>
 
       <div class="column column--trio">
-          <p><a href="#" target="_blank">Amit Gupta</a></p>
+          <p><a href="http://amitgupta.com/" target="_blank">Amit Gupta</a></p>
           <p class="caption">Entrepreneur and designer. You're gonna want to check out his story.</p>
 
-          <p><a href="#" target="_blank">Sara Soueidan</a></p>
-          <p class="caption">A freelance front-end developer with an extensive knowledge on CSS and SVG.</p>
+          <p><a href="http://jessicahische.is/" target="_blank">Jessica Hische</a></p>
+          <p class="caption">A letterer, illustrator, and type designer based in San Francisco.</p>
 
-          <p><a href="#" target="_blank">Paul Ford</a></p>
-          <p class="caption">An experienced developer of technology for the web and mobile. Author of 'What Is Code?'.</p>
+          <p><a href="http://ethanmarcotte.com/" target="_blank">Ethan Marcotte</a></p>
+          <p class="caption">Web designer, speaker, and author. He coined the term 'responsive web design'.</p>
 
-          <p><a href="#" target="_blank">Aaron Draplin</a></p>
-          <p class="caption">Badass. Graphic designer, author, and founder of the Draplin Design Company. Good first name.</p>
+          <p><a href="https://karenmcgrane.com/" target="_blank">Karen McGrane</a></p>
+          <p class="caption">Content strategy, information architecture, and interaction design. The author of <a href="https://abookapart.com/products/content-strategy-for-mobile" class="decoration-none" target="_blank">Content Strategy for Mobile</a>.</p>
+
+          <p><a href="http://meyerweb.com/" target="_blank">Eric Meyer</a></p>
+          <p class="caption">An expert on HTML, CSS, and web standards.</p>
+
       </div>
 
       <div class="column column--trio">
-          <p><a href="#" target="_blank">Jeffery Zeldman</a></p>
-          <p class="caption">An entrepreneur, web designer, author, podcaster and speaker on web design.</p>
+          <p><a href="http://wilsonminer.com/" target="_blank">Wilson Miner</a></p>
+          <p class="caption">A digital designer based in San Francisco. Previously worked at Apple, EveryBlock, Rdio, Facebook.</p>
 
-          <p><a href="#" target="_blank">Elle Luna</a></p>
-          <p class="caption">Artist, and author of 'The Crossroads of Should and Must'.</p>
+          <p><a href="https://robinrendle.com/" target="_blank">Robin Rendle</a></p>
+          <p class="caption">UK-based designer. Writes for <a href="https://css-tricks.com/" class="decoration-none" target="_blank">CSS-Tricks</a>.</p>
 
-          <p><a href="#" target="_blank">Erik Speikermann</a></p>
+          <p><a href="https://sarasoueidan.com/articles/" target="_blank">Sara Soueidan</a></p>
+          <p class="caption">A freelance front-end developer with an extensive knowledge on CSS and SVG.</p>
+
+          <p><a href="http://spiekermann.com/en/" target="_blank">Erik Speikermann</a></p>
           <p class="caption">A German typographer and designer.</p>
 
-          <p><a href="https://twitter.com/karenmcgrane" target="_blank">Karen McGrane</a></p>
-          <p class="caption">Content strategy, information architecture, and interaction design. The author of <a href="https://abookapart.com/products/content-strategy-for-mobile" class="decoration-none">Content Strategy for Mobile</a>.</p>
+          <p><a href="http://www.zeldman.com/" target="_blank">Jeffery Zeldman</a></p>
+          <p class="caption">An entrepreneur, web designer, author, podcaster and speaker on web design.</p>
 
-          <p><a href="#" target="_blank">Robin Rendle</a></p>
-          <p class="caption">UK-based designer. Writes for <a href="https://css-tricks.com/" class="decoration-none">CSS-Tricks</a>.</p>
       </div>
 
     </div>
 
     <div class="section typeset">
       <div class="column">
-        <h3>Videos</h3>
+        <h3>Talks</h3>
       </div>
 
       <div class="column column--trio">
@@ -232,14 +238,14 @@
       </div>
 
       <div class="column column--trio">
-        <p><a href="https://www.youtube.com/watch?v=_xG68lkrMDU" target="_blank">Kai Brach &ndash; Offscreen</a></p>
-        <p class="caption">Kai Brach, for Envato • 2014</p>
+        <p><a href="https://www.youtube.com/watch?v=X1ynZm1wI18" target="_blank">Rami Ismail, Vlambeer</a></p>
+        <p class="caption">Rami Ismail, XOXO • 2015</p>
 
         <p><a href="https://www.youtube.com/watch?v=jDIZS4IQlQk" target="_blank">Love Your Work</a></p>
         <p class="caption">Simon Sinek, Creative Mornings • 2012</p>
 
-        <p><a href="https://www.youtube.com/watch?v=S021YPdkJb4&index=1&list=FLnt5LVQDgNmHclScek0Hgtg" target="_blank">Inspired by Life</a></p>
-        <p class="caption">Dan Petty • 2016</p>
+        <p><a href="https://www.youtube.com/watch?v=9AP1hoNJkMk" target="_blank">Amit Gupta, Photojojo</a></p>
+        <p class="caption">Amit Gupta, XOXO • 2015</p>
       </div>
 
       <div class="column column--trio">
