--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p><a href="http://amzn.to/2cgBQ2z" target="_blank">Design as Art</a></p>
         <p class="caption">Bruno Munari • 1971</p>
 
-        <p><a href="http://amzn.to/2cgCehj" target="_blank">Less and More: The Design Ethos of Dieter Rams</a></p>
+        <p><a href="http://amzn.to/2cgCehj" target="_blank" style="white-space: nowrap;">Less and More: The Design Ethos of Dieter Rams</a></p>
         <p class="caption">Klaus Klemp • 2011</p>
 
         <p><a href="http://read.shapeofdesignbook.com" target="_blank">The Shape of Design</a></p>
@@ -58,7 +58,7 @@
         <p><a href="http://amzn.to/2bQAdJC" target="_blank">The New Typography</a></p>
         <p class="caption">Jan Tschichold • 1928</p>
 
-        <p><a href="http://amzn.to/2bTWOGq" target="_blank">Stop Stealing Sheep &amp; Find Out How Type Works</a></p>
+        <p><a href="http://amzn.to/2bTWOGq" target="_blank" style="white-space: nowrap;">Stop Stealing Sheep &amp; Find Out How Type Works</a></p>
         <p class="caption">Erik Spiekermann and E.M Ginger • 2003</p>
 
       </div>
