Switching and to ampersand.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="column column--trio">
 
         <p><a href="https://abookapart.com/products/design-for-real-life" target="_blank" class="">Design for Real Life</a></p>
-        <p class="caption">Eric A. Meyer and Sara Wachter-Boettcher • 2016</p>
+        <p class="caption">Eric A. Meyer &amp; Sara Wachter-Boettcher • 2016</p>
 
         <p><a href="http://amzn.to/2cgBQ2z" target="_blank">Design as Art</a></p>
         <p class="caption">Bruno Munari • 1971</p>
@@ -59,7 +59,7 @@
         <p class="caption">Jan Tschichold • 1928</p>
 
         <p><a href="http://amzn.to/2bTWOGq" target="_blank">Stop Stealing Sheep &amp; Find Out How Type Works</a></p>
-        <p class="caption">Erik Spiekermann and E.M Ginger • 2003</p>
+        <p class="caption">Erik Spiekermann &amp; E.M Ginger • 2003</p>
 
       </div>
 
@@ -75,7 +75,7 @@
         <p class="caption">Josef Mülller-Brockmann • 1996</p>
 
         <p><a href="http://amzn.to/2c7FWJ7" target="_blank">Type: New Perspectives in Typography </a></p>
-        <p class="caption">Scott Williams and Henrik Kubel • 2015</p>
+        <p class="caption">Scott Williams &amp; Henrik Kubel • 2015</p>
 
         <p><a href="http://amzn.to/2c0UZDm" target="_blank">Detail in Typography</a></p>
         <p class="caption">Jost Hochuli • 1987</p>
@@ -106,7 +106,7 @@
         <p class="caption">Gavin Strange • 2016</p>
 
         <p><a href="http://amzn.to/2c0USHP" target="_blank">Editorial Design: Design and Print</a></p>
-        <p class="caption">Cath Caldwell and Yolanda Zappaterra • 2014</p>
+        <p class="caption">Cath Caldwell &amp; Yolanda Zappaterra • 2014</p>
 
         <p><a href="http://amzn.to/2emwKnl" target="_blank">Remote: Office Not Required</a></p>
         <p class="caption">David Heinemeier Hansson • 2013</p>
