Adding more people.

--- a/index.html
+++ b/index.html
@@ -190,18 +190,24 @@
           <p><a href="http://jessicahische.is/" target="_blank">Jessica Hische</a></p>
           <p class="caption">A letterer, illustrator, and type designer based in San Francisco.</p>
 
+          <p><a href="https://twitter.com/house?lang=en" target="_blank">Allison House</a></p>
+          <p class="caption">Designer boss. Doing really creative work with 3D.</p>
+
+          <p><a href="http://darngood.co/" target="_blank">Meg Lewis</a></p>
+          <p class="caption">Designer and founder of <a href="http://www.ghostlyferns.com/" target="_blank">Ghostly Ferns</a>. Super fun human.</p>
+
           <p><a href="http://ethanmarcotte.com/" target="_blank">Ethan Marcotte</a></p>
           <p class="caption">Web designer, speaker, and author. He coined the term 'responsive web design'.</p>
 
           <p><a href="https://karenmcgrane.com/" target="_blank">Karen McGrane</a></p>
           <p class="caption">Content strategy, information architecture, and interaction design. The author of <a href="https://abookapart.com/products/content-strategy-for-mobile" class="decoration-none" target="_blank">Content Strategy for Mobile</a>.</p>
 
-          <p><a href="http://meyerweb.com/" target="_blank">Eric Meyer</a></p>
-          <p class="caption">An expert on HTML, CSS, and web standards.</p>
-
       </div>
 
       <div class="column column--trio">
+          <p><a href="http://meyerweb.com/" target="_blank">Eric Meyer</a></p>
+          <p class="caption">An expert on HTML, CSS, and web standards.</p>
+          
           <p><a href="http://wilsonminer.com/" target="_blank">Wilson Miner</a></p>
           <p class="caption">A digital designer based in San Francisco. Previously worked at Apple, EveryBlock, Rdio, Facebook.</p>
 
