--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="column column--trio">
           <p><a href="http://meyerweb.com/" target="_blank">Eric Meyer</a></p>
           <p class="caption">An expert on HTML, CSS, and web standards.</p>
-          
+
           <p><a href="http://wilsonminer.com/" target="_blank">Wilson Miner</a></p>
           <p class="caption">A digital designer based in San Francisco. Previously worked at Apple, EveryBlock, Rdio, Facebook.</p>
 
@@ -290,7 +290,7 @@
   </section>
 
   <footer class="global-footer">
-    <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Belfast. Available on <a href="https://github.com/aarongilmore/studentsguidetotheinternet" target="_blank">GitHub</a>. So long, and thanks for all the fish.</p>
+    <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Berlin. Available on <a href="https://github.com/aarongilmore/studentsguidetotheinternet" target="_blank">GitHub</a>. So long, and thanks for all the fish.</p>
   </footer>
 
 </body>
