--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student's Guide to the Internet &mdash;  A collection of resources for students of design</title>
   <link rel="stylesheet" href="/assets/css/style.min.css">
+  <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png"/>
 
   <!-- Fonty Python -->
@@ -290,7 +291,29 @@
   </section>
 
   <footer class="global-footer">
+    <div class="section typeset">
+    <div class="column column--duo">
+    <h6 class="">Stay up-to-date</h6>
+    <!-- Begin MailChimp Signup Form -->
+    <div id="mc_embed_signup">
+    <form action="//aarongilmore.us5.list-manage.com/subscribe/post?u=9ddd4dee57ef929930b1a90b4&amp;id=1d68fb87c7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+
+      <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9ddd4dee57ef929930b1a90b4_1d68fb87c7" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+    </form>
+</div>
+</div>
+
+<!--End mc_embed_signup-->
+<div class="column column--duo">
+    <h6 class="">Colophon</h6>
     <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Berlin. Available on <a href="https://github.com/aarongilmore/studentsguidetotheinternet" target="_blank">GitHub</a>. So long, and thanks for all the fish.</p>
+    </div>
+    </div>
   </footer>
 
 </body>
