Removing GitHub ref.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <div class="column">
       <!-- <h6 class="">Colophon</h6> -->
-      <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Berlin. Available on <a href="https://github.com/aarongilmore/studentsguidetotheinternet" target="_blank">GitHub</a>. So long, and thanks for all the fish.</p>
+      <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Berlin. So long, and thanks for all the fish.</p>
     </div>
     </div>
   </footer>
