Adding meta information for better SEO.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A collection of resources for students of design">
+  <meta name="keywords" content="articles, talks, books, social, design, programming">
+  <meta name="author" content="Aaron Gilmore">
+
   <title>Student's Guide to the Internet &mdash;  A collection of resources for students of design</title>
   <link rel="stylesheet" href="/assets/css/style.min.css">
-  <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png"/>
 
   <!-- Fonty Python -->
@@ -292,7 +295,7 @@
 
   <footer class="global-footer">
     <div class="section typeset">
-    <!-- <div class="column column--duo">
+    <div class="column column--duo">
     <h6 class="">Subscribe for updates</h6>
     <p>Subscribe to stay up-to-date with new content and features.</p>
     <div id="mc_embed_signup">
@@ -304,11 +307,10 @@
         </div>
       </form>
     </div>
-    </div> -->
+    </div>
 
 
     <div class="column">
-      <!-- <h6 class="">Colophon</h6> -->
       <p>Made by <a href="http://aarongilmore.com" target="_blank">Aaron Gilmore</a> in Berlin. So long, and thanks for all the fish.</p>
     </div>
     </div>
