Updating meta description and shortening title.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A collection of resources for students of design">
+  <meta name="description" content="A collection of resources for students of design; standout books, articles, and media relating to design and technology.">
   <meta name="keywords" content="articles, talks, books, social, design, programming">
   <meta name="author" content="Aaron Gilmore">
 
-  <title>Student's Guide to the Internet &mdash;  A collection of resources for students of design</title>
+  <title>Student's Guide to the Internet</title>
   <link rel="stylesheet" href="/assets/css/style.min.css">
   <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png"/>
 
